# TimelineControlApp

./: CMakeLists.txt  CONSTRAINTS_CN.md
App/: App.qrc  main.cpp  main.qml
App/pages/: DeviceCommandDialog.qml  DeviceControlPage.qml  DeviceFieldForm.qml  DeviceProfilePairField.qml  DeviceReadOnlyField.qml  DevicesPage.qml  ProjectionEditableRect.qml  ProjectionKeystonePage.qml  ProjectionPage.qml  RunsPage.qml  TimelineEditorPage.qml  TimelinePage.qml  VirtualPlaybackCommandPage.qml
App/pages/timeline/: AddCommandDialog.qml  TimelineDeviceTrackArea.qml  TimelineRuler.qml  TimelineTrackArea.qml
App/runtime/: TimelineRuntime.cpp  TimelineRuntime.h  TimelineShellController.cpp  TimelineShellController.h
App/runtime/devices/: Device.cpp  Device.h  DeviceCommand.cpp  DeviceCommand.h  DeviceCommandExecutionParamUpdater.cpp  DeviceCommandExecutionParamUpdater.h  DeviceCommandFactory.cpp  DeviceCommandFactory.h  DeviceCommandTemplate.cpp  DeviceCommandTemplate.h  DeviceCommand_Dmx512.cpp  DeviceCommand_Dmx512.h  DeviceCommand_Http.cpp  DeviceCommand_Http.h  DeviceCommand_PC.cpp  DeviceCommand_PC.h  DeviceCommand_Serial.cpp  DeviceCommand_Serial.h  DeviceCommand_Server.cpp  DeviceCommand_Server.h  DeviceConstants.h  DeviceInspectorFormProvider.cpp  DeviceInspectorFormProvider.h  DeviceManager.cpp  DeviceManager.h  DeviceModel.cpp  DeviceModel.h  DeviceParamSpec.cpp  DeviceParamSpec.h  DeviceTemplate.cpp  DeviceTemplate.h  DeviceTemplateModel.cpp  DeviceTemplateModel.h  LogMacros.cpp  LogMacros.h
App/runtime/devices/executors/: DeviceCommandExecutor.cpp  DeviceCommandExecutor.h  DeviceExecutorManager.cpp  DeviceExecutorManager.h  HttpCommandExecutor.cpp  HttpCommandExecutor.h  SerialCommandExecutor.cpp  SerialCommandExecutor.h
App/runtime/models/: TypedListModel.h  VariantListModel.cpp  VariantListModel.h
App/runtime/projection/: ProjectionInstructionManager.cpp  ProjectionInstructionManager.h  VideoProjectionPlanController.cpp  VideoProjectionPlanController.h
App/runtime/timeline/: TimelineCommand.cpp  TimelineCommand.h  TimelineController.cpp  TimelineController.h  TimelineManager.cpp  TimelineManager.h  TimelinePlanController.cpp  TimelinePlanController.h
App/runtime/video/: FfmpegVideoFrameItem.cpp  FfmpegVideoFrameItem.h  PcTimelinePreviewGenerator.cpp  PcTimelinePreviewGenerator.h
UiCore/: CMakeLists.txt  UiCore.qrc
UiCore/qml/: AppShell.qml
UiCore/qml/components/base/: AppBackdrop.qml  AppButton.qml  AppChoiceControl.qml  AppColorControl.qml  AppFieldBlock.qml  AppIcon.qml  AppPanel.qml  AppPopup.qml  AppScrollPane.qml  AppSection.qml  AppSegmentedControl.qml  AppSelect.qml  AppSliderControl.qml  AppSurface.qml  AppText.qml  AppTextField.qml  AppToggleControl.qml
UiCore/qml/components/base/internal/: AppControlBase.qml  AppOptionData.js  AppPaneBase.qml  AppPaneDisclosure.qml  AppPaneHeader.qml  AppTapRegion.qml  AppThemeUtils.js
UiCore/qml/components/form/: AppFieldForm.qml  AppFieldFormPane.qml  AppFormContent.qml
UiCore/qml/components/form/renderers/: AppFormButtonRenderer.qml  AppFormChipsRenderer.qml  AppFormChoiceRenderer.qml  AppFormColorRenderer.qml  AppFormCustomFieldRenderer.qml  AppFormFieldRendererBase.qml  AppFormSegmentedRenderer.qml  AppFormSelectRenderer.qml  AppFormSliderRenderer.qml  AppFormSummaryRenderer.qml  AppFormTextFieldRenderer.qml  AppFormToggleRenderer.qml
UiCore/qml/components/shell/: AppInspectorPane.qml  AppLeftPane.qml  AppRailButton.qml  AppSelectionOverlay.qml  AppTaskPanel.qml  AppTopbarIconButton.qml
UiCore/qml/foundation/: AppBridgeUtils.js  AppUiEnums.qml  qmldir
UiCore/qml/menus/: AppMenuPane.qml
UiCore/qml/standalone/: UiCoreStandalone.qml
UiCore/qml/theme/: AppColors.qml  AppControlStyles.qml  AppDensity.qml  AppIcons.qml  AppMetrics.qml  AppMotion.qml  AppShape.qml  AppShellLayout.qml  AppTheme.qml  AppTypography.qml  AppZ.qml
UiCore/runtime/app/: AppSettings.cpp  AppSettings.h  BaseRuntime.cpp  BaseRuntime.h
UiCore/runtime/fields/: BaseField.cpp  BaseField.h
UiCore/runtime/form/: AppForm.cpp  AppForm.h  AppFormField.cpp  AppFormField.h  AppFormSection.cpp  AppFormSection.h
UiCore/runtime/menus/: AppMenuCustomBlock.cpp  AppMenuCustomBlock.h  AppMenuModel.cpp  AppMenuModel.h
UiCore/runtime/shell/: AppDrawer.cpp  AppDrawer.h  AppShellController.cpp  AppShellController.h  AppShellRouteState.cpp  AppShellRouteState.h
UiCore/runtime/task/: Task.cpp  Task.h  TaskFlow.h  TaskManager.cpp  TaskManager.h
UiCore/standalone/: main.cpp
cmake/: CollectSources.cmake  FindFFmpeg.cmake  FindOE.cmake  MacroUtils.cmake
libavrb/include/avrb/: avrb.h
libavrb/include/avrb/avplayer/: avplayer.h
libavrb/include/avrb/avreader/: avcallback.h  avreader.h
libavrb/include/avrb/avutil/: export.h
libavrb/include/avrb/pixeltool/: avframefactory.h  pixeldata.h  pixelgl.h
libavrb/lib/: avrb.lib
